my article complete

--- a/blog.html
+++ b/blog.html
@@ -8,5 +8,7 @@
 </head>
 <body>
     <h1>My Latest Blog</h1>
+    <p> My Latest blog start. Amarr Fist blog a tomader sobaike sagotom janai</p>
+
 </body>
 </html>
