--- a/blog.html
+++ b/blog.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Last Blog</title>
+    <title>My Last Blog ready</title>
 </head>
 <body>
     <h1>My Latest Blog</h1>
-    <p> My Latest blog start. Amarr Fist blog a tomader sobaike sagotom janai</p>
+    <p> My Latest blog start. Amarr Fist blog a tomader sobaike sagotom janai. Bangladesh Is A Beautiful Country</p>
 
 </body>
 </html>
