change heading name

--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>My Latest Blog</h1>
-    <h3>Bloger Name Shezan Khan</h3>
+    <h3>Bloger Name Shezan Khan GK</h3>
     <p> My Latest blog start. Amarr Fist blog a tomader sobaike sagotom janai. Bangladesh Is A Beautiful Country</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero perferendis ducimus ea voluptatum nemo alias odio blanditiis officiis delectus. Provident?</p>
 
